# cpp-opengl

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: Window.cpp  Window.h  cpp-opengl.cpp
src/render/: Renderer.cpp  Renderer.h
src/shader/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
src/window/: Window.cpp  Window.h
